# neocel

./: .gitignore  .markdownlint.json  Cargo.toml  README.md  pyrightconfig.json  test.csv
docs/: register_keybind.md
src/: config.rs  main.rs
src/api/: command_api.rs  config.rs  config_api.rs  document_api.rs  engine_api.rs  keybind_api.rs  mod.rs  text_document_api.rs  utils.rs
src/api/documents/: mod.rs  sheet_document_api.rs  text_document_api.rs
src/commands/: command_dispatcher.rs  command_engine.rs  globals.rs  input_engine.rs  mod.rs
src/engine/: document.rs  layout.rs  mod.rs  parse.rs  popup.rs
src/engine/documents/: mod.rs  spreadsheet.rs  text.rs
src/input/: input_engine.rs  keymaps.rs  mod.rs
src/render/: helpers.rs  mod.rs  screen_buffer.rs  styling.rs
src/render/windows/: info.rs  mod.rs  table.rs  text.rs
test/: init.py  stub.py  theme.py
typing/: api.pyi
