[package]
name = "neocel"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2.10.0"
crossterm = "0.29.0"
csv = "1.4.0"
log = "0.4.29"
pyo3 = {version="0.27.2", features=["serde", "auto-initialize"]}
pythonize = "0.27.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
simplelog = "0.12.2"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
